// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildDataNode should build path tree node when root exist 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "isLeaf": true,
                "key": "test.jpg",
                "title": "/test/Goodbye/asas/test.jpg",
              },
            ],
            "key": "asas",
            "title": "asas",
          },
        ],
        "key": "Goodbye",
        "title": "Goodbye",
      },
      {
        "children": [
          {
            "children": [
              {
                "isLeaf": true,
                "key": "test2.jpg",
                "title": "/test/go/sdks/test2.jpg",
              },
            ],
            "key": "sdks",
            "title": "sdks",
          },
        ],
        "key": "go",
        "title": "go",
      },
    ],
    "key": "/test",
    "title": "test",
  },
]
`;

exports[`buildDataNode should build path tree node with multiple 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "isLeaf": true,
            "key": "test.jpg",
            "title": "/test/Goodbye/test.jpg",
          },
        ],
        "key": "Goodbye",
        "title": "Goodbye",
      },
      {
        "children": [
          {
            "isLeaf": true,
            "key": "test2.jpg",
            "title": "/test/go/test2.jpg",
          },
        ],
        "key": "go",
        "title": "go",
      },
    ],
    "key": "test",
    "title": "test",
  },
]
`;

exports[`buildDataNode should build path tree node with one path 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "isLeaf": true,
            "key": "test.jpg",
            "title": "/test/Goodbye/test.jpg",
          },
          {
            "isLeaf": true,
            "key": "test2.jpg",
            "title": "/test/Goodbye/test2.jpg",
          },
        ],
        "key": "Goodbye",
        "title": "Goodbye",
      },
    ],
    "key": "test",
    "title": "test",
  },
]
`;

exports[`buildDataNode should build path tree node without duplication 1`] = `
[
  {
    "key": "/User/albert.li/Desktop",
    "title": "/User/albert.li/Desktop",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "isLeaf": true,
                        "key": "image0-15.jpg",
                        "title": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image0-15.jpg",
                      },
                      {
                        "isLeaf": true,
                        "key": "image1-1.jpg",
                        "title": "/Users/albert.li/Desktop/196X/19610000_天津_老爸戎装/image1-1.jpg",
                      },
                    ],
                    "key": "19610000_天津_老爸戎装",
                    "title": "19610000_天津_老爸戎装",
                  },
                ],
                "key": "196X",
                "title": "196X",
              },
            ],
            "key": "Desktop",
            "title": "Desktop",
          },
        ],
        "key": "albert.li",
        "title": "albert.li",
      },
    ],
    "key": "Users",
    "title": "Users",
  },
]
`;

exports[`buildDataNode should return a DataNode 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "isLeaf": true,
            "key": "test.jpg",
            "title": "test/google.com/test.jpg",
          },
        ],
        "key": "google.com",
        "title": "google.com",
      },
    ],
    "key": "test",
    "title": "test",
  },
]
`;
